# robot_hand

arduino_code/: flex_imu_reader.ino
src/arm/: CMakeLists.txt  package.xml
src/arm/launch/: display.left.py
src/arm/scripts/: hand_teleop_node
src/arm/urdf/: left.urdf  right.urdf
